[gd_scene load_steps=6 format=2]

[ext_resource path="res://script/hero_well.gd" type="Script" id=1]
[ext_resource path="res://assets/art/well-1.png" type="Texture" id=2]
[ext_resource path="res://assets/art/civ-orange.png" type="Texture" id=3]
[ext_resource path="res://assets/art/plainman-front.png" type="Texture" id=4]
[ext_resource path="res://scenes/DialogueBox.tscn" type="PackedScene" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 2 )

[node name="civ" type="Sprite" parent="."]
position = Vector2( 607.629, 462.247 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="plainman" type="Sprite" parent="."]
position = Vector2( 884.499, 460.469 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogueBox" parent="CanvasLayer" instance=ExtResource( 5 )]

[node name="Answers" type="Node2D" parent="."]
editor/display_folded = true

[node name="Riddle1" type="CenterContainer" parent="Answers"]
visible = false
margin_right = 1025.0
margin_bottom = 599.0

[node name="VBoxContainer" type="VBoxContainer" parent="Answers/Riddle1"]
margin_left = 483.0
margin_top = 261.0
margin_right = 542.0
margin_bottom = 337.0

[node name="Button" type="Button" parent="Answers/Riddle1/VBoxContainer"]
margin_right = 90.0
margin_bottom = 20.0
text = "A Fly"

[node name="MarginContainer" type="MarginContainer" parent="Answers/Riddle1/VBoxContainer"]
margin_top = 24.0
margin_right = 90.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button2" type="Button" parent="Answers/Riddle1/VBoxContainer"]
margin_top = 28.0
margin_right = 90.0
margin_bottom = 48.0
text = "A Clock"

[node name="MarginContainer2" type="MarginContainer" parent="Answers/Riddle1/VBoxContainer"]
margin_top = 52.0
margin_right = 90.0
margin_bottom = 52.0

[node name="Button3" type="Button" parent="Answers/Riddle1/VBoxContainer"]
margin_top = 56.0
margin_right = 90.0
margin_bottom = 76.0
text = "A Cat"

[node name="Riddle2" type="CenterContainer" parent="Answers"]
visible = false
margin_right = 1025.0
margin_bottom = 599.0

[node name="VBoxContainer" type="VBoxContainer" parent="Answers/Riddle2"]
margin_left = 409.0
margin_top = 261.0
margin_right = 615.0
margin_bottom = 337.0

[node name="Button" type="Button" parent="Answers/Riddle2/VBoxContainer"]
margin_right = 90.0
margin_bottom = 20.0
text = "A Penguin Wearing Sunglasses"

[node name="MarginContainer" type="MarginContainer" parent="Answers/Riddle2/VBoxContainer"]
margin_top = 24.0
margin_right = 90.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button2" type="Button" parent="Answers/Riddle2/VBoxContainer"]
margin_top = 28.0
margin_right = 90.0
margin_bottom = 48.0
text = "A Zebra in the Desert"

[node name="MarginContainer2" type="MarginContainer" parent="Answers/Riddle2/VBoxContainer"]
margin_top = 52.0
margin_right = 90.0
margin_bottom = 52.0

[node name="Button3" type="Button" parent="Answers/Riddle2/VBoxContainer"]
margin_top = 56.0
margin_right = 90.0
margin_bottom = 76.0
text = "A Newspaper"

[node name="Riddle3" type="CenterContainer" parent="Answers"]
visible = false
margin_right = 1025.0
margin_bottom = 599.0

[node name="VBoxContainer" type="VBoxContainer" parent="Answers/Riddle3"]
margin_left = 474.0
margin_top = 261.0
margin_right = 551.0
margin_bottom = 337.0

[node name="Button" type="Button" parent="Answers/Riddle3/VBoxContainer"]
margin_right = 90.0
margin_bottom = 20.0
text = "11 Meters"

[node name="MarginContainer" type="MarginContainer" parent="Answers/Riddle3/VBoxContainer"]
margin_top = 24.0
margin_right = 90.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button2" type="Button" parent="Answers/Riddle3/VBoxContainer"]
margin_top = 28.0
margin_right = 90.0
margin_bottom = 48.0
text = "7 Meters"

[node name="MarginContainer2" type="MarginContainer" parent="Answers/Riddle3/VBoxContainer"]
margin_top = 52.0
margin_right = 90.0
margin_bottom = 52.0

[node name="Button3" type="Button" parent="Answers/Riddle3/VBoxContainer"]
margin_top = 56.0
margin_right = 90.0
margin_bottom = 76.0
text = "3 Meters"

